# omnichroma

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  robin-map-cmake-config.patch  vcpkg.json
.github/workflows/: build-linux.yml  build-windows-msys2.yml  build-windows-vs2022.yml
bench/sets/: CMakeLists.txt  sets.cpp
src/: bitmap.cpp  bitmap.h  color.cpp  color.h  coord.cpp  coord.h  coordset.h  generate.h  main.cpp  omnichroma.cpp  omnichroma.h  pixelsbuffer.cpp  pixelsbuffer.h
test/: uniseed_gencolors.cpp  uniseed_omnichroma.cpp
test/uniseed/: CMakeLists.txt  uniseed.cpp
